<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="autosave"
        android:summaryOff="@string/pref_autosave_off"
        android:summaryOn="@string/pref_autosave_on"
        android:title="@string/pref_title_autosave" />
    <EditTextPreference
        android:defaultValue="@string/pref_custom_css_default"
        android:key="@string/pref_custom_css"
        android:summary="@string/pref_description_custom_css"
        android:title="@string/pref_title_custom_css" />
    <ListPreference
        android:entries="@array/pref_entries_dark_mode"
        android:entryValues="@array/pref_values_dark_mode"
        android:defaultValue="@string/pref_key_dark_mode_auto"
        android:key="@string/pref_key_dark_mode"
        android:title="@string/title_dark_mode" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/readability_enabled"
        android:summaryOff="@string/pref_readability_off"
        android:summaryOn="@string/pref_readability_on"
        android:title="@string/pref_title_readability" />

</PreferenceScreen>
