<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:title="@string/action_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save" />
    <item
        android:id="@+id/action_save_as"
        android:title="@string/action_save_as" />
    <item
        android:id="@+id/action_lock_swipe"
        android:checkable="true"
        android:title="@string/action_lock_swipe"
        app:showAsAction="never" />
</menu>