<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/mainGroup">
        <item
            android:id="@+id/action_mainFragment_to_settingsContainerFragment"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_mainFragment_to_supportFragment"
            android:title="@string/support_title"
            android:icon="@drawable/ic_favorite_black_24dp"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/addtionalInfoGroup">
        <item
            android:id="@+id/action_mainFragment_to_helpFragment"
            android:title="@string/action_help"
            android:icon="@drawable/ic_help_black_24dp"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_mainFragment_to_librariesFragment"
            android:title="@string/action_libraries"
            android:icon="@drawable/ic_info_black_24dp"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_mainFragment_to_privacyFragment"
            android:title="@string/action_privacy"
            android:icon="@drawable/ic_eye_black_24dp"
            app:showAsAction="never" />
    </group>
</menu>