<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/mainFragment">

    <fragment
        android:id="@+id/settingsContainerFragment"
        android:name="com.wbrawner.simplemarkdown.view.fragment.SettingsContainerFragment"
        android:label="@string/title_activity_settings" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.wbrawner.simplemarkdown.view.fragment.MainFragment"
        android:label="">
        <action
            android:id="@+id/action_mainFragment_to_helpFragment"
            app:destination="@id/helpFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_privacyFragment"
            app:destination="@id/privacyFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_librariesFragment"
            app:destination="@id/librariesFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_settingsContainerFragment"
            app:destination="@id/settingsContainerFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_supportFragment"
            app:destination="@id/supportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/supportFragment"
        android:name="com.wbrawner.simplemarkdown.view.fragment.SupportFragment"
        android:label="@string/support_title" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.wbrawner.simplemarkdown.view.fragment.MarkdownInfoFragment"
        android:label="@string/action_help"
        tools:layout="@layout/fragment_markdown_info">
        <argument
            android:name="file"
            app:argType="string"
            android:defaultValue="Cheatsheet.md" />
    </fragment>
    <fragment
        android:id="@+id/privacyFragment"
        android:name="com.wbrawner.simplemarkdown.view.fragment.MarkdownInfoFragment"
        android:label="@string/action_privacy"
        tools:layout="@layout/fragment_markdown_info">
        <argument
            android:name="file"
            android:defaultValue="Privacy Policy.md"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/librariesFragment"
        android:name="com.wbrawner.simplemarkdown.view.fragment.MarkdownInfoFragment"
        android:label="@string/action_libraries"
        tools:layout="@layout/fragment_markdown_info">
        <argument
            android:name="file"
            android:defaultValue="Libraries.md"
            app:argType="string" />
    </fragment>
</navigation>