<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/heartIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_favorite_black_24dp"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/description_heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/supportInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/support_info"
                android:textAlignment="center"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintTop_toBottomOf="@+id/heartIcon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/githubButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackgroundGitHub"
                android:textColor="@color/colorWhite"
                android:text="@string/action_view_github"
                app:layout_constraintTop_toBottomOf="@+id/supportInfoText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackgroundPlayStore"
                android:textColor="@color/colorWhite"
                android:text="@string/action_rate"
                app:layout_constraintTop_toBottomOf="@+id/githubButton" />

            <LinearLayout
                android:id="@+id/supportButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/rateButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>